--- a/index.html
+++ b/index.html
@@ -1,1 +1,262 @@
+<!doctype html>
+<html lang="pl">
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <meta name="robots" content="noindex, nofollow" />
+  <title>Voucher Urodzinowy — Dominika</title>
+
+  <!-- Fonts (Google Fonts) -->
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Cormorant+Garamond:wght@400;500;600&family=Inter:wght@300;400;500&display=swap" rel="stylesheet">
+
+  <style>
+    :root{
+      --bg: #0b0a09;
+      --paper: rgba(245, 239, 227, 0.06);
+      --paper-2: rgba(245, 239, 227, 0.09);
+      --ink: rgba(246, 241, 231, 0.92);
+      --muted: rgba(246, 241, 231, 0.66);
+      --line: rgba(246, 241, 231, 0.22);
+      --line-2: rgba(246, 241, 231, 0.12);
+      --shadow: rgba(0, 0, 0, 0.55);
+    }
+
+    *{ box-sizing: border-box; }
+    html, body { height: 100%; }
+    body{
+      margin: 0;
+      color: var(--ink);
+      background: radial-gradient(1200px 800px at 30% 10%, rgba(255,255,255,0.05), transparent 60%),
+                  radial-gradient(900px 700px at 70% 90%, rgba(255,255,255,0.04), transparent 65%),
+                  linear-gradient(180deg, #070606 0%, #0b0a09 35%, #070606 100%);
+      font-family: Inter, system-ui, -apple-system, Segoe UI, Roboto, Arial, sans-serif;
+      letter-spacing: 0.2px;
+      overflow-x: hidden;
+    }
+
+    /* Subtle paper grain */
+    body::before{
+      content:"";
+      position: fixed;
+      inset: 0;
+      pointer-events: none;
+      background-image:
+        radial-gradient(circle at 20% 30%, rgba(255,255,255,0.04) 0 1px, transparent 1px),
+        radial-gradient(circle at 70% 60%, rgba(255,255,255,0.03) 0 1px, transparent 1px),
+        radial-gradient(circle at 40% 80%, rgba(255,255,255,0.02) 0 1px, transparent 1px);
+      background-size: 120px 120px, 140px 140px, 160px 160px;
+      opacity: 0.35;
+      mix-blend-mode: soft-light;
+    }
+
+    .wrap{
+      min-height: 100%;
+      display: grid;
+      place-items: center;
+      padding: 36px 18px;
+    }
+
+    .voucher{
+      width: min(860px, 92vw);
+      background: linear-gradient(180deg, var(--paper) 0%, transparent 65%);
+      border: 1px solid var(--line-2);
+      border-radius: 22px;
+      box-shadow: 0 22px 70px var(--shadow);
+      position: relative;
+      overflow: hidden;
+    }
+
+    /* inner glow and vignette */
+    .voucher::before{
+      content:"";
+      position:absolute;
+      inset:-2px;
+      background:
+        radial-gradient(900px 520px at 50% 20%, rgba(245,239,227,0.10), transparent 60%),
+        radial-gradient(700px 420px at 20% 80%, rgba(245,239,227,0.06), transparent 60%),
+        radial-gradient(900px 600px at 80% 85%, rgba(0,0,0,0.65), transparent 55%);
+      opacity: 0.9;
+      pointer-events:none;
+    }
+
+    .content{
+      position: relative;
+      padding: clamp(26px, 5vw, 52px);
+      display: grid;
+      gap: 22px;
+      text-align: center;
+    }
+
+    .topline{
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      gap: 14px;
+      color: var(--muted);
+      font-size: 12px;
+      letter-spacing: 0.28em;
+      text-transform: uppercase;
+    }
+
+    .topline .rule{
+      height: 1px;
+      width: clamp(36px, 10vw, 120px);
+      background: linear-gradient(90deg, transparent, var(--line), transparent);
+    }
+
+    h1{
+      margin: 0;
+      font-family: "Cormorant Garamond", serif;
+      font-weight: 600;
+      font-size: clamp(34px, 4.8vw, 54px);
+      letter-spacing: 0.02em;
+      line-height: 1.05;
+    }
+
+    .subtitle{
+      margin-top: -6px;
+      font-family: "Cormorant Garamond", serif;
+      font-weight: 500;
+      font-size: clamp(18px, 2.2vw, 24px);
+      color: var(--muted);
+      letter-spacing: 0.04em;
+    }
+
+    .divider{
+      margin: 10px auto 4px;
+      width: min(520px, 85%);
+      height: 1px;
+      background: linear-gradient(90deg, transparent, var(--line), transparent);
+    }
+
+    .details{
+      width: min(520px, 92%);
+      margin: 0 auto;
+      border: 1px solid var(--line-2);
+      border-radius: 18px;
+      background: linear-gradient(180deg, var(--paper-2), transparent);
+      padding: 18px 16px;
+      display: grid;
+      gap: 12px;
+      text-align: left;
+    }
+
+    .row{
+      display: grid;
+      grid-template-columns: 1fr;
+      gap: 6px;
+      padding: 10px 10px;
+      border-radius: 12px;
+    }
+
+    .row + .row{
+      border-top: 1px solid rgba(246, 241, 231, 0.08);
+      padding-top: 14px;
+      margin-top: 2px;
+    }
+
+    .label{
+      color: var(--muted);
+      font-size: 12px;
+      letter-spacing: 0.18em;
+      text-transform: uppercase;
+    }
+
+    .value{
+      font-size: 16px;
+      letter-spacing: 0.02em;
+      line-height: 1.35;
+    }
+
+    .footer{
+      margin-top: 10px;
+      padding-top: 18px;
+      color: var(--muted);
+      font-family: "Cormorant Garamond", serif;
+      font-size: clamp(14px, 1.8vw, 18px);
+      letter-spacing: 0.02em;
+      line-height: 1.45;
+    }
+
+    .footer em{
+      font-style: italic;
+      color: rgba(246, 241, 231, 0.78);
+    }
+
+    /* Subtle corner marks */
+    .mark{
+      position:absolute;
+      width: 46px;
+      height: 46px;
+      border: 1px solid rgba(246, 241, 231, 0.10);
+      border-radius: 12px;
+      transform: rotate(45deg);
+      opacity: 0.55;
+      pointer-events:none;
+    }
+    .m1{ top: -10px; left: -10px; }
+    .m2{ top: -10px; right: -10px; }
+    .m3{ bottom: -10px; left: -10px; }
+    .m4{ bottom: -10px; right: -10px; }
+
+    /* Mobile tweaks */
+    @media (max-width: 520px){
+      .details{ padding: 14px 12px; }
+      .row{ padding: 8px 8px; }
+      .value{ font-size: 15px; }
+      .topline{ font-size: 11px; letter-spacing: 0.24em; }
+    }
+  </style>
+</head>
+
+<body>
+  <main class="wrap">
+    <section class="voucher" aria-label="Voucher urodzinowy">
+      <span class="mark m1"></span>
+      <span class="mark m2"></span>
+      <span class="mark m3"></span>
+      <span class="mark m4"></span>
+
+      <div class="content">
+        <div class="topline">
+          <span class="rule" aria-hidden="true"></span>
+          <span>Voucher</span>
+          <span class="rule" aria-hidden="true"></span>
+        </div>
+
+        <header>
+          <h1>Voucher Urodzinowy</h1>
+          <div class="subtitle">Dla Dominiki</div>
+        </header>
+
+        <div class="divider" aria-hidden="true"></div>
+
+        <section class="details" aria-label="Szczegóły vouchera">
+          <div class="row">
+            <div class="label">Rodzaj</div>
+            <div class="value">Tajemnicza podróż</div>
+          </div>
+
+          <div class="row">
+            <div class="label">Termin wykorzystania</div>
+            <div class="value">Kwiecień 2026</div>
+          </div>
+
+          <div class="row">
+            <div class="label">Organizator</div>
+            <div class="value">Krzysztof</div>
+          </div>
+        </section>
+
+        <footer class="footer">
+          <em>„Życie niepoddane refleksji nie jest warte przeżycia.”</em><br />
+          — Sokrates
+        </footer>
+      </div>
+    </section>
+  </main>
+</body>
+</html>
 
