--- a/index.html
+++ b/index.html
@@ -118,7 +118,7 @@
       background: linear-gradient(90deg, transparent, var(--line), transparent);
     }
 
-    /* świeca - minimalny rysunek */
+    /* świeca - rycina na stojaku */
     .candle-wrap{
       display: grid;
       place-items: center;
@@ -127,18 +127,19 @@
       opacity: 0.92;
     }
     .candle{
-      width: min(220px, 60vw);
+      width: min(230px, 62vw);
       height: auto;
       filter: drop-shadow(0 10px 26px rgba(0,0,0,0.55));
     }
 
+    /* ✅ ZMNIEJSZONY NAGŁÓWEK */
     h1{
       margin: 0;
       font-family: "Cormorant Garamond", serif;
       font-weight: 600;
-      font-size: clamp(34px, 4.7vw, 56px);
+      font-size: clamp(28px, 4.0vw, 46px);
       letter-spacing: 0.02em;
-      line-height: 1.05;
+      line-height: 1.08;
     }
 
     .subtitle{
@@ -247,53 +248,80 @@
       <div class="content">
         <div class="topline">
           <span class="rule" aria-hidden="true"></span>
-          <span>Voucher</span>
+          <span>Voucher Urodzinowy</span>
           <span class="rule" aria-hidden="true"></span>
         </div>
 
-        <!-- Minimalistyczna świeca (SVG) -->
+        <!-- ✅ POPRAWIONA ŚWIECA NA STOJAKU (SVG) -->
         <div class="candle-wrap" aria-hidden="true">
-          <svg class="candle" viewBox="0 0 320 140" xmlns="http://www.w3.org/2000/svg">
-            <!-- delikatne tło ryciny -->
+          <svg class="candle" viewBox="0 0 360 170" xmlns="http://www.w3.org/2000/svg">
             <defs>
-              <linearGradient id="ink" x1="0" x2="0" y1="0" y2="1">
+              <linearGradient id="inkWarm" x1="0" x2="0" y1="0" y2="1">
                 <stop offset="0" stop-color="rgba(231,214,188,0.55)"/>
-                <stop offset="1" stop-color="rgba(231,214,188,0.15)"/>
+                <stop offset="1" stop-color="rgba(231,214,188,0.16)"/>
               </linearGradient>
-              <radialGradient id="flame" cx="50%" cy="45%" r="60%">
-                <stop offset="0" stop-color="rgba(231,214,188,0.60)"/>
-                <stop offset="1" stop-color="rgba(122,82,52,0.10)"/>
+
+              <radialGradient id="flameWarm" cx="50%" cy="40%" r="70%">
+                <stop offset="0" stop-color="rgba(231,214,188,0.65)"/>
+                <stop offset="1" stop-color="rgba(122,82,52,0.12)"/>
               </radialGradient>
             </defs>
 
-            <!-- linia ozdobna -->
-            <path d="M24 112 C70 90, 110 90, 160 112 C210 134, 250 134, 296 112"
+            <!-- delikatna fala jak w starej rycinie -->
+            <path d="M40 128 C90 108, 130 108, 180 128 C230 148, 270 148, 320 128"
                   fill="none" stroke="rgba(231,214,188,0.18)" stroke-width="1.2"/>
 
-            <!-- świeca -->
-            <rect x="148" y="56" width="24" height="56" rx="10"
-                  fill="none" stroke="url(#ink)" stroke-width="1.6"/>
-            <path d="M148 72 C156 68, 164 68, 172 72" fill="none"
-                  stroke="rgba(231,214,188,0.18)" stroke-width="1.1"/>
-
-            <!-- knot -->
-            <path d="M160 50 C160 56, 160 56, 160 58" stroke="rgba(231,214,188,0.40)" stroke-width="1.4" fill="none"/>
+            <!-- aura świecy -->
+            <circle cx="180" cy="50" r="36" fill="rgba(122,82,52,0.07)"/>
+            <circle cx="180" cy="50" r="24" fill="rgba(122,82,52,0.10)"/>
 
             <!-- płomień -->
-            <path d="M160 22
-                     C152 30, 150 42, 160 50
-                     C170 42, 168 30, 160 22Z"
-                  fill="url(#flame)" stroke="rgba(231,214,188,0.30)" stroke-width="1.2"/>
+            <path d="M180 16
+                     C170 28, 166 44, 180 54
+                     C194 44, 190 28, 180 16Z"
+                  fill="url(#flameWarm)"
+                  stroke="rgba(231,214,188,0.30)" stroke-width="1.2"/>
 
-            <!-- delikatna aura -->
-            <circle cx="160" cy="42" r="26" fill="rgba(122,82,52,0.10)"/>
-            <circle cx="160" cy="42" r="36" fill="rgba(122,82,52,0.06)"/>
+            <!-- knot -->
+            <path d="M180 54 C180 58, 180 62, 180 66"
+                  stroke="rgba(231,214,188,0.42)" stroke-width="1.4" fill="none"/>
 
-            <!-- drobne “gwiazdki” / kurz w powietrzu -->
-            <circle cx="92" cy="38" r="1.2" fill="rgba(231,214,188,0.25)"/>
-            <circle cx="234" cy="30" r="1.0" fill="rgba(231,214,188,0.20)"/>
-            <circle cx="256" cy="52" r="1.1" fill="rgba(231,214,188,0.18)"/>
-            <circle cx="70" cy="54" r="1.0" fill="rgba(231,214,188,0.16)"/>
+            <!-- świeca (prosta, wysoka) -->
+            <rect x="170" y="66" width="20" height="62" rx="8"
+                  fill="none" stroke="url(#inkWarm)" stroke-width="1.7"/>
+            <path d="M170 82 C176 78, 184 78, 190 82"
+                  fill="none" stroke="rgba(231,214,188,0.16)" stroke-width="1.1"/>
+            <path d="M170 98 C176 94, 184 94, 190 98"
+                  fill="none" stroke="rgba(231,214,188,0.12)" stroke-width="1.0"/>
+
+            <!-- stojak: talerzyk pod świecą -->
+            <path d="M156 132 C168 126, 192 126, 204 132"
+                  fill="none" stroke="rgba(231,214,188,0.22)" stroke-width="1.4"/>
+            <path d="M156 132 C168 138, 192 138, 204 132"
+                  fill="none" stroke="rgba(231,214,188,0.14)" stroke-width="1.2"/>
+
+            <!-- stojak: trzon -->
+            <path d="M180 132 C180 142, 180 146, 180 152"
+                  fill="none" stroke="rgba(231,214,188,0.26)" stroke-width="1.6"/>
+
+            <!-- stojak: kielich/uchwyt -->
+            <path d="M166 148
+                     C172 142, 188 142, 194 148
+                     C190 154, 170 154, 166 148Z"
+                  fill="none" stroke="rgba(231,214,188,0.22)" stroke-width="1.4"/>
+
+            <!-- stojak: podstawa (ciemniejsza, jak metal) -->
+            <path d="M150 156
+                     C160 148, 200 148, 210 156
+                     C200 164, 160 164, 150 156Z"
+                  fill="rgba(0,0,0,0.18)"
+                  stroke="rgba(231,214,188,0.16)" stroke-width="1.3"/>
+
+            <!-- delikatne “iskierki”/pył -->
+            <circle cx="108" cy="52" r="1.2" fill="rgba(231,214,188,0.20)"/>
+            <circle cx="246" cy="38" r="1.1" fill="rgba(231,214,188,0.18)"/>
+            <circle cx="268" cy="66" r="1.0" fill="rgba(231,214,188,0.16)"/>
+            <circle cx="92" cy="74"  r="1.0" fill="rgba(231,214,188,0.14)"/>
           </svg>
         </div>
 
