--- a/index.html
+++ b/index.html
@@ -13,13 +13,12 @@
 
   <style>
     :root{
-      /* Dark Academia: cieplejsze brązy / sepia */
       --bg-1: #070605;
       --bg-2: #0c0a08;
       --bg-3: #060504;
 
       --paper: rgba(231, 214, 188, 0.06);
-      --paper-2: rgba(231, 214, 188, 0.10);
+      --paper-2: rgba(231, 214, 188, 0.11);
 
       --ink: rgba(247, 241, 232, 0.92);
       --muted: rgba(247, 241, 232, 0.66);
@@ -27,7 +26,11 @@
       --line: rgba(231, 214, 188, 0.28);
       --line-2: rgba(231, 214, 188, 0.14);
 
-      --shadow: rgba(0, 0, 0, 0.60);
+      --shadow: rgba(0, 0, 0, 0.62);
+
+      /* “candle glow” – ciepły bursztyn */
+      --glow-1: rgba(176, 122, 74, 0.22);
+      --glow-2: rgba(231, 214, 188, 0.12);
     }
 
     *{ box-sizing: border-box; }
@@ -37,7 +40,7 @@
       margin: 0;
       color: var(--ink);
       background:
-        radial-gradient(1100px 760px at 28% 12%, rgba(122, 82, 52, 0.16), transparent 60%),
+        radial-gradient(1100px 760px at 28% 12%, rgba(122, 82, 52, 0.18), transparent 60%),
         radial-gradient(900px 680px at 78% 88%, rgba(231, 214, 188, 0.06), transparent 62%),
         linear-gradient(180deg, var(--bg-1) 0%, var(--bg-2) 40%, var(--bg-3) 100%);
       font-family: Inter, system-ui, -apple-system, Segoe UI, Roboto, Arial, sans-serif;
@@ -45,17 +48,17 @@
       overflow-x: hidden;
     }
 
-    /* Subtelne ziarno */
+    /* Ziarno / film */
     body::before{
       content:"";
       position: fixed;
       inset: 0;
       pointer-events: none;
       background-image:
-        radial-gradient(circle at 20% 30%, rgba(231,214,188,0.05) 0 1px, transparent 1px),
-        radial-gradient(circle at 70% 60%, rgba(231,214,188,0.04) 0 1px, transparent 1px),
-        radial-gradient(circle at 45% 82%, rgba(231,214,188,0.03) 0 1px, transparent 1px);
-      background-size: 120px 120px, 140px 140px, 160px 160px;
+        radial-gradient(circle at 18% 28%, rgba(231,214,188,0.05) 0 1px, transparent 1px),
+        radial-gradient(circle at 72% 62%, rgba(231,214,188,0.04) 0 1px, transparent 1px),
+        radial-gradient(circle at 44% 84%, rgba(231,214,188,0.03) 0 1px, transparent 1px);
+      background-size: 120px 120px, 150px 150px, 170px 170px;
       opacity: 0.35;
       mix-blend-mode: soft-light;
     }
@@ -68,31 +71,45 @@
     }
 
     .voucher{
-      width: min(880px, 94vw);
-      background: linear-gradient(180deg, var(--paper) 0%, transparent 70%);
+      width: min(920px, 94vw);
       border: 1px solid var(--line-2);
-      border-radius: 24px;
-      box-shadow: 0 26px 80px var(--shadow);
+      border-radius: 26px;
+      box-shadow: 0 26px 86px var(--shadow);
       position: relative;
       overflow: hidden;
+      background: linear-gradient(180deg, var(--paper) 0%, transparent 72%);
     }
 
-    /* inner glow + vignette */
+    /* premium warstwy tła: winieta + glow + “papier” */
     .voucher::before{
       content:"";
       position:absolute;
       inset:-2px;
       background:
-        radial-gradient(900px 540px at 50% 16%, rgba(231,214,188,0.10), transparent 60%),
-        radial-gradient(720px 440px at 20% 78%, rgba(122,82,52,0.18), transparent 60%),
-        radial-gradient(980px 620px at 84% 88%, rgba(0,0,0,0.70), transparent 55%);
-      opacity: 0.95;
+        radial-gradient(980px 560px at 50% 14%, rgba(231,214,188,0.10), transparent 60%),
+        radial-gradient(820px 520px at 20% 78%, rgba(176,122,74,0.16), transparent 58%),
+        radial-gradient(1100px 740px at 85% 88%, rgba(0,0,0,0.72), transparent 55%),
+        linear-gradient(180deg, rgba(231,214,188,0.04), transparent 70%);
+      opacity: 0.98;
       pointer-events:none;
+    }
+
+    /* ✅ “poświata świecy” – NIE pokazujemy świecy, tylko światło */
+    .voucher::after{
+      content:"";
+      position:absolute;
+      inset:0;
+      pointer-events:none;
+      background:
+        radial-gradient(520px 240px at 58% 20%, var(--glow-1), transparent 60%),
+        radial-gradient(520px 300px at 50% 28%, var(--glow-2), transparent 65%);
+      opacity: 0.55;
+      mix-blend-mode: screen;
     }
 
     .content{
       position: relative;
-      padding: clamp(26px, 5vw, 54px);
+      padding: clamp(26px, 5vw, 56px);
       display: grid;
       gap: 18px;
       text-align: center;
@@ -103,7 +120,7 @@
       align-items: center;
       justify-content: center;
       gap: 14px;
-      color: var(--muted);
+      color: rgba(247,241,232,0.62);
       font-size: 12px;
       letter-spacing: 0.28em;
       text-transform: uppercase;
@@ -111,10 +128,11 @@
 
     .topline .rule{
       height: 1px;
-      width: clamp(40px, 10vw, 140px);
+      width: clamp(40px, 10vw, 160px);
       background: linear-gradient(90deg, transparent, var(--line), transparent);
     }
 
+    /* delikatne “emboss” w typografii */
     h1{
       margin: 0;
       font-family: "Cormorant Garamond", serif;
@@ -122,6 +140,9 @@
       font-size: clamp(28px, 4.0vw, 46px);
       letter-spacing: 0.02em;
       line-height: 1.08;
+      text-shadow:
+        0 1px 0 rgba(0,0,0,0.35),
+        0 12px 30px rgba(0,0,0,0.45);
     }
 
     .subtitle{
@@ -129,27 +150,36 @@
       font-family: "Cormorant Garamond", serif;
       font-weight: 500;
       font-size: clamp(18px, 2.2vw, 24px);
-      color: var(--muted);
+      color: rgba(247,241,232,0.66);
       letter-spacing: 0.04em;
+      text-shadow: 0 10px 26px rgba(0,0,0,0.35);
     }
 
     .divider{
-      margin: 10px auto 6px;
-      width: min(560px, 86%);
+      margin: 12px auto 8px;
+      width: min(620px, 88%);
       height: 1px;
       background: linear-gradient(90deg, transparent, var(--line), transparent);
+      opacity: 0.95;
     }
 
     .details{
-      width: min(560px, 94%);
+      width: min(640px, 96%);
       margin: 0 auto;
-      border: 1px solid var(--line-2);
-      border-radius: 18px;
-      background: linear-gradient(180deg, var(--paper-2), transparent);
-      padding: 18px 16px;
+      border: 1px solid rgba(231,214,188,0.18);
+      border-radius: 20px;
+      padding: 20px 18px;
       display: grid;
-      gap: 12px;
+      gap: 14px;
       text-align: left;
+
+      background:
+        linear-gradient(180deg, rgba(231,214,188,0.09), rgba(0,0,0,0.06)),
+        radial-gradient(700px 260px at 40% 0%, rgba(176,122,74,0.10), transparent 60%);
+      box-shadow:
+        inset 0 1px 0 rgba(255,255,255,0.05),
+        0 18px 50px rgba(0,0,0,0.35);
+      backdrop-filter: blur(6px);
     }
 
     .row{
@@ -157,19 +187,19 @@
       grid-template-columns: 1fr;
       gap: 6px;
       padding: 10px 10px;
-      border-radius: 12px;
+      border-radius: 14px;
     }
 
     .row + .row{
       border-top: 1px solid rgba(231,214,188,0.10);
-      padding-top: 14px;
+      padding-top: 16px;
       margin-top: 2px;
     }
 
     .label{
-      color: rgba(247,241,232,0.62);
+      color: rgba(247,241,232,0.58);
       font-size: 12px;
-      letter-spacing: 0.18em;
+      letter-spacing: 0.20em;
       text-transform: uppercase;
     }
 
@@ -177,16 +207,18 @@
       font-size: 16px;
       letter-spacing: 0.02em;
       line-height: 1.35;
+      color: rgba(247,241,232,0.92);
     }
 
     .footer{
-      margin-top: 10px;
+      margin-top: 12px;
       padding-top: 18px;
-      color: rgba(247,241,232,0.62);
+      color: rgba(247,241,232,0.56);
       font-family: "Cormorant Garamond", serif;
       font-size: clamp(14px, 1.8vw, 18px);
       letter-spacing: 0.02em;
       line-height: 1.45;
+      text-shadow: 0 10px 26px rgba(0,0,0,0.35);
     }
 
     .footer em{
@@ -209,6 +241,13 @@
     .m2{ top: -10px; right: -10px; }
     .m3{ bottom: -10px; left: -10px; }
     .m4{ bottom: -10px; right: -10px; }
+
+    @media (max-width: 520px){
+      .details{ padding: 16px 14px; }
+      .row{ padding: 8px 8px; }
+      .value{ font-size: 15px; }
+      .topline{ font-size: 11px; letter-spacing: 0.24em; }
+    }
   </style>
 </head>
 
