--- a/index.html
+++ b/index.html
@@ -293,7 +293,7 @@
         <section class="details" aria-label="Szczegóły vouchera">
           <div class="row">
             <div class="label">Rodzaj</div>
-            <div class="value">Tajemnicza 3-dniowa podróż</div>
+            <div class="value">Tajemnicza podróż</div>
           </div>
 
           <div class="row">
